--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     padding: 1rem 2rem;
     font-weight: bold;
     font-size: 1.1rem;
-    color: #ffffff;
+    color: #3CFF00;
     border: none;
     border-radius: var(--border-radius);
     outline: none;
