--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 #button {
-    width: 100%;
+    width: 25%;
     padding: 1rem 2rem;
     font-weight: bold;
     font-size: 1.1rem;
     color: #3CFF00;
-    border: none;
-    border-radius: var(--border-radius);
-    outline: none;
+    border: 5px;
+    border-color: blue;
+    
     cursor: pointer;
-    background: var(--color-primary);
+   
 }
