--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 #button {
-    width: 25%;
-    padding: 1rem 2rem;
-    font-weight: bold;
-    font-size: 1.1rem;
-    color: #3CFF00;
-    border: 5px;
-    border-color: blue;
+background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;    
     
     cursor: pointer;
    
